--- a/client/src/styles/timeSlot.scss
+++ b/client/src/styles/timeSlot.scss
@@ -39,3 +39,14 @@
         }
     }
 }
+
+
+@media screen and (min-width:767px) {
+    .timeSlotsContainer{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        width: 60%;
+    }
+}
